got ng-include to work and basic stock ticker to work IT IS SO USELESS RIGHT NOW but stretch goal to fix it

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,64 @@
   font-family: serif;
 }
 
+
+
+/* STOCK TICKER STYLES */
+/* https://htmleditor.w3schools.in/?filename=html_css_scrolling_text_using_css */
+.animated-ticker {
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+    background: #fefefe;
+    color: #333;
+    border: 1px solid #4a4a4a;
+}
+
+.animated-ticker p {
+    position: absolute;
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    -moz-animation: scroll-left 3s linear infinite;
+    -webkit-animation: scroll-left 3s linear infinite;
+    animation: scroll-left 30s linear infinite;
+}
+
+@-moz-keyframes scroll-left {
+    0% {
+        -moz-transform: translateX(100%);
+    }
+    100% {
+        -moz-transform: translateX(-100%);
+    }
+}
+
+@-webkit-keyframes scroll-left {
+    0% {
+        -webkit-transform: translateX(100%);
+    }
+    100% {
+        -webkit-transform: translateX(-100%);
+    }
+}
+
+@keyframes scroll-left {
+    0% {
+        -moz-transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        transform: translateX(100%);
+    }
+    100% {
+        -moz-transform: translateX(-100%);
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
+    }
+}
+
 /* SIGNUP-VIEW STYLES */
 .signup-container {
   background: #E7E8E9;
@@ -12,7 +70,6 @@
   padding: 50px 100px;
   color: #168593;
   border-radius: 10px;
-  /* border: 3px solid yellow; */
 }
 
 .welcome-message {
@@ -20,7 +77,6 @@
   font-size: 5em;
   background: #168593;
   color: ivory;
-  /* border: 3px solid orange; */
   padding-left: 25px;
 }
 
@@ -29,7 +85,6 @@
 }
 
 .questionnaire {
-  /* border: 10px solid pink; */
   display: flex;
   flex-direction: column;
   padding-left: 100px;
@@ -37,12 +92,11 @@
 }
 
 .question {
-  /* border: 3px solid blue; */
   font-size: 3em;
 }
 
 .response-container {
-  /* border: 3px solid black; */
+
   display: flex;
 }
 
@@ -50,7 +104,6 @@
   margin-top: 25px;
   display: flex;
   flex-direction: column;
-  /* border: 3px solid red; */
   font-size: 2em;
   min-width: 20%;
 }
@@ -63,7 +116,6 @@
 .portfolio-button {
   background: #168593;
   color: ivory;
-  /* border: 2px solid black; */
   padding-left: 15px;
   border-radius: 3px;
 }
@@ -77,5 +129,4 @@
   justify-content: center;
   align-items: center;
   padding-left: 50px;
-  /* border: 3px solid teal; */
 }
